--- a/styles.css
+++ b/styles.css
@@ -85,9 +85,11 @@ nav a:hover {
         flex-direction: column;
     }
     .logo{
+      margin-bottom: 10%;
         text-align: center;
     }
     nav{
+
         display: flex;
         flex-direction: column;
         margin-left: 0;
